--- a/index.html
+++ b/index.html
@@ -5,12 +5,54 @@
     <title>Session 11</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
+   
   </head>
   <body>
     <div class="app container my-5">
-      <h1>Hello world</h1>
+      <h1>La vie choc de Barbie</h1>
       <p>Happy {{ day }}! It's {{ now.getHours() }}:{{ now.getMinutes() }}.</p>
     </div>
+
+    <section class="timeline">
+  <ul>
+    <li>
+      <div>
+        <time>1934</time>
+        Some content here
+      </div>
+    </li>
+
+    <li>
+      <div>
+        <time>1934</time>
+        Some content here
+      </div>
+    </li>
+
+    <li>
+      <div>
+        <time>1934</time>
+        Some content here
+      </div>
+    </li>
+
+    <li>
+      <div>
+        <time>1934</time>
+        Some content here
+      </div>
+    </li>
+
+    <li>
+      <div>
+        <time>1934</time>
+        Some content here
+      </div>
+    </li>
+     
+    <!-- more list items here -->
+  </ul>
+</section>
 
     <script src="vendors/vue.min.js"></script>
     <script src="index.js"></script>
